--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">ICoder</a>
+        <a class="navbar-brand" href="/iCoderWebSite/">ICoder</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,15 +37,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/tutorial2/"
+              <a class="nav-link active" aria-current="page" href="/iCoderWebSite/"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/tutorial2/about.html">About</a>
+              <a class="nav-link" href="/iCoderWebSite/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/tutorial2/contact.html">Contact us</a>
+              <a class="nav-link" href="/iCoderWebSite/contact.html">Contact us</a>
             </li>
             <li class="nav-item dropdown">
               <a
