--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">ICoder</a>
+        <a class="navbar-brand" href="/iCoderWebSite/">ICoder</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,10 +45,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="/tutorial2/about.html">About</a>
+              <a class="nav-link " href="/iCoderWebSite/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/tutorial2/contact.html">Contact us</a>
+              <a class="nav-link active" href="/iCoderWebSite/contact.html">Contact us</a>
             </li>
             <li class="nav-item dropdown">
               <a
